deploy/gatewayService.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service # Name of the service
  labels:
    app: gateway-service
spec:
  type: LoadBalancer
  selector:
    app: gateway-pod # Send traffic to pods with this label
  ports:
    - name: default
      port: 80 # Port that we want to reach the service running on the pods on
      targetPort: 5000 # Port that the running service exposes within the container
